# stacks

./: .gitattributes  .gitignore  Cargo.toml  README.md  Vagrantfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  release.yml  test.yml
e2e/: Cargo.toml
e2e/examples/: deadlock.rs  http.rs  lock.rs  pingpong_async.rs  pingpong_sync.rs  rss.rs  sleep.rs  writer.rs
e2e/proptest-regressions/: main.txt
e2e/sql/: offcpu_switch_by_tgid.sql
e2e/src/: main.rs
e2e/tests/: tests.rs
explore/: STACKS-0-1723099350.parquet  cpu.ipynb  data.ipynb  oncpu_offcpu.ipynb  rss.ipynb
past/: Cargo.toml  build.rs
past/proptest-regressions/: tests.txt
past/src/: bpf.rs  bpf_profile.rs  collector.rs  main.rs  parquet.rs  perf_event.rs  program.rs  state.rs  tests.rs  util.rs
past/src/bpf/: past.bpf.c  past.h  past.skel.rs
past/src/tests_sql/: perf_natural_order.sql
pastconv/: Cargo.toml  build.rs
pastconv/src/: common.rs  main.rs  pprof.rs
pastconv/src/proto/: perftools.profiles.rs
pastconv/src/sql/: blk_ustack_amount_for_buildid.sql  cpu_ustacks_for_command.sql  cpu_ustacks_for_command_and_buildid.sql  net_ustack_udp_bandwidth_for_buildid.sql  offcpu_stacks_for_command.sql  rss_counter.sql  rss_ustacks_growth_for_buildid.sql  start_time.sql  switch_with_stacks.sql  trace_exit_and_close.sql  ustack_rss_growth_for_command.sql  vfs_write_amount_for_buildid.sql
scripts/: examples.sh  stats.sh  usdt_example.sh
stacks/: Cargo.toml  build.rs
stacks/proptest-regressions/: tests.txt
stacks/src/: bpf.rs  bpf_profile.rs  main.rs  perf_event.rs  state.rs  state_writer.rs  symbolizer.rs  tests.rs
stacks/src/bpf/: stacks.bpf.c  stacks.h
stacks/src/tests_sql/: switch_natural_order.sql
stacksexport/: Cargo.toml
stacksexport/sql/: net_ustack_tcp_bandwidth_for_buildid.sql
stacksexport/sql/pprof/: blk_ustack_duration_for_buildid.sql  cpu_ustacks_for_command.sql  net_ustack_tcp_bandwidth_for_buildid.sql  offcpu_stacks_for_buildid.sql  rss_ustacks_growth_for_buildid.sql  usdt_ustack_trace_wait_for_buildid.sql  vfs_read_amount_for_command.sql  vfs_write_amount_for_command.sql
stacksexport/sql/traceview/: trace_exit_and_close.sql  usdt_all.sql  usdt_slow_on_cpu_10ms.sql  usdt_wait_time_not_closed.sql
stacksexport/src/: main.rs  pprof.rs  trace.rs
stacksexport/src/sql/: vfs_read_amount_for_buildid.sql
tracing-past/: Cargo.toml
tracing-past/src/: lib.rs
tracing-stacks/: Cargo.toml
tracing-stacks/src/: lib.rs
