[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-stacks = { path = "../tracing-stacks" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
datafusion = "38.0.0"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.7", features = ["derive"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
libc = "0.2.155"
serial_test = "3.1.1"
