[package]
name = "stacks"
version = "0.1.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
# default to vendoring, as i intend to use it only this way
default = ["libbpf-rs/vendored"]
# link all required libs statically
static = ["libbpf-rs/static"]
# vendor only libbpf
vendored-libbpf = ["libbpf-rs/default"]

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
libbpf-rs = { version = "0.23", default-features = false }
libc = "0.2"
plain = "0.2"
tracing = "0.1.40"
tracing-stacks = { path = "../tracing-stacks" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.5.4", features = ["derive", "string"] }
blazesym = { git = "https://github.com/dshulyak/blazesym.git", branch = "v0.2.0-alpha.12-caching" }
humantime = "2.1"
bytemuck = "1.16.1"
bytes = "1.6.0"
parquet = "52.0.0"
thiserror = "1.0.62"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

[dev-dependencies]
proptest = "1.4.0"
proptest-state-machine = "0.3.0"
datafusion = "38.0.0"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
itertools = "0.13.0"
lazy_static = "1.4.0"

[build-dependencies]
anyhow = "1.0"
grev = "0.1.3"
libbpf-cargo = "0.23"
vmlinux = { git = "https://github.com/libbpf/libbpf-rs", tag = "v0.23.3"}
