[package]
name = "stacksexport"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "string"] }
datafusion = "38.0.0"
parquet = "51.0.0"
tokio = { version = "1.35.1", features = ["full", "macros"] }
bytes = "1.6.0"
humantime = "2.1.0"
prost = "0.12"
itertools = "0.13.0"
# i don't need to use my fork here, just do that for consistency
blazesym = { git = "https://github.com/dshulyak/blazesym.git", branch = "v0.2.0-alpha.12-caching" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dirs = "5.0.1"

[build-dependencies]
prost-build = "0.5"
anyhow = "1.0"
grev = "0.1.3"
